# bootcamp_py_aula_01

./: .pre-commit-config.yaml  README.md  exercicio_01.py  exercicio_02.py  kpy.py  pyproject.toml
